chore: update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,10 @@
                 {% endif %}
                 {% endfor %}
                 {% endif %}
+
+                <a class="navbar-item has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav" aria-label="Search, language, menu">
+                    <span>🔍︎ 🌐</span>
+                </a>
             </div>
 
             <div class="navbar-end">
