--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,10 @@
             <a href="{{ site.baseurl }}/" class="navbar-item has-text-white">
                 <img src="/assets/images/set-outlooksignatures logo 500px.png" alt="Set-OutlookSignatures">
             </a>
+            <a class="navbar-item has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav"
+                aria-label="Search, language, menu">
+                <span>🔍︎ 🌐</span>
+            </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
                 :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
                 <span aria-hidden="true"></span>
@@ -39,10 +43,6 @@
                 {% endif %}
                 {% endfor %}
                 {% endif %}
-
-                <a class="navbar-item has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav" aria-label="Search, language, menu">
-                    <span>🔍︎ 🌐</span>
-                </a>
             </div>
 
             <div class="navbar-end">
@@ -52,12 +52,12 @@
 
                 <div class="navbar-item has-text-white">
                     <span>
-                        🌐 
+                        🌐
                         {%- for tongue in site.languages -%}
-                        <a
-                            {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %}
-                            class="has-text-white"
-                            {% static_href %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"{% endstatic_href %}
+                        <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
+                            class="has-text-white" {% static_href
+                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                            {% endstatic_href %}
                             data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
                             {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
                         {%- endfor -%}
