--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <a href="{{ site.baseurl }}/" class="navbar-item has-text-white">
                 <img src="/assets/images/set-outlooksignatures logo 500px.png" alt="Set-OutlookSignatures">
             </a>
-            <a class="navbar-item has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav"
+            <a class="navbar-item ml-auto has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav"
                 aria-label="Search, language, menu">
                 <span>🔍︎🌐</span>
             </a>
