--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,14 +38,15 @@
     {% endunless %}
 
 
-    {% assign seo_output = seo | newline_to_br %}
-    {% assign seo_lines = seo_output | split: '<br />' %}
+    {% capture seo_raw %}{% seo %}{% endcapture %}
+    {% assign seo_lines = seo_raw | split: '\n' %}
 
     {% for line in seo_lines %}
-        {% unless line contains "link" and line contains "rel" and line contains "canonical" %}
-            {{ line | strip }}
-        {% endunless %}
+    {% unless line contains '<link' and line contains ' rel="canonical"' %}
+        {{ line | strip }}
+    {% endunless %}
     {% endfor %}
+
 
     {% if site.feed %}
         {% feed_meta %}
