chore: update head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,14 +38,14 @@
     {% endunless %}
 
 
-    {% capture seo_raw %}{% seo %}{% endcapture %}
-    {% assign seo_lines = seo_raw | newline_to_br | split: '<br />' %}
+    {%- capture seo_raw -%}{% seo %}{%- endcapture -%}
+    {%- assign seo_lines = seo_raw | newline_to_br | split: '<br />' -%}
 
-    {% for line in seo_lines %}
-        {% unless line contains '<link' and line contains ' rel="canonical"' %}
+    {%- for line in seo_lines -%}
+        {%- unless line contains '<link' and line contains ' rel="canonical"' %}
             {{ line }}
-        {% endunless %}
-    {% endfor %}
+        {%- endunless -%}
+    {%- endfor -%}
 
 
     {% if site.feed %}
