--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 x-on:click="openNav = !openNav" aria-label="Search, language, menu">
                 🔍︎🌐
             </div>
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
+            <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
                 :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
