chore: update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
             </div>
             <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
                 :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
+                <div>🔍︎|🌐|</div>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
