chore: update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
             </a>
             <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
                 x-on:click="openNav = !openNav" aria-label="Search, language, menu">
-                🔍︎|🌐
+                🔍︎🌐
             </div>
-            <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
-                :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
+            <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navMenu" :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
