chore: gh_sponsor

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,9 +65,9 @@
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
-                <a class="navbar-item has-text-whitge" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
                     aria-label="Sponsor">
-                    <span>♡︎ Sponsor</span>
+                    ♡︎ Sponsor
                 </a>
                 {% endif %}
             </div>
