--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,11 +46,9 @@
             </div>
 
             <div class="navbar-end">
-                <span>
                     <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                        🔍︎ Search
+                        <span>🔍︎ Search</span>
                     </a>
-                </span>
 
                 <div class="navbar-item has-text-white">
                     <span>
@@ -67,12 +65,10 @@
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
-                <span>
                     <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
                         aria-label="Sponsor">
-                        <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
+                        <span><span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor</span>
                     </a>
-                </span>
                 {% endif %}
             </div>
         </div>
