--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,9 +46,9 @@
             </div>
 
             <div class="navbar-end">
-                    <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                        <span>🔍︎ Search</span>
-                    </a>
+                <a class="navbar-item has-text-white" href="/search" aria-label="Search">
+                    <span>🔍︎ Search</span>
+                </a>
 
                 <div class="navbar-item has-text-white">
                     <span>
@@ -65,10 +65,13 @@
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
-                    <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
-                        aria-label="Sponsor">
-                        <span><span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor</span>
-                    </a>
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
+                    aria-label="Sponsor">
+                    <svg data-external-link-icon></svg>
+                    <span>
+                        <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
+                    </span>
+                </a>
                 {% endif %}
             </div>
         </div>
