--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,32 +46,35 @@
             </div>
 
             <div class="navbar-end">
-                <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                    <span>🔍︎ Search</span>
-                </a>
 
                 <div class="navbar-item has-text-white">
-                    <span>
-                        🌐
-                        {%- for tongue in site.languages -%}
-                        <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
-                            class="has-text-white" {% static_href
-                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                            {% endstatic_href %}
-                            data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                            {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
-                        {%- endfor -%}
-                    </span>
+                    <a class="has-text-white" href="/search" aria-label="Search">
+                        <span>🔍︎ Search</span>
+                    </a>
+                </div>
+
+                <div class="navbar-item has-text-white">
+                    🌐
+                    {%- for tongue in site.languages -%}
+                    <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
+                        static_href
+                        %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                        {% endstatic_href %}
+                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                        {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                    {%- endfor -%}
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
-                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
-                    aria-label="Sponsor">
-                    <svg data-external-link-icon></svg>
-                    <span>
-                        <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
-                    </span>
-                </a>
+                <div class="navbar-item has-text-white">
+                    <a class="has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
+                        aria-label="Sponsor">
+                        <svg data-external-link-icon></svg>
+                        <span>
+                            <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
+                        </span>
+                    </a>
+                </div>
                 {% endif %}
             </div>
         </div>
