chore: update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,9 +64,10 @@
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
-                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-label="Sponsor">
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
+                    aria-label="Sponsor">
                     <svg data-external-link-icon></svg>
-                        <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
+                    <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
                 </a>
                 {% endif %}
             </div>
