--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,8 +39,7 @@
                 {% else %}
                 <a href="{{ item.link | relative_url }}"
                     class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
-                    item.name }}
-                </a>
+                    item.name }}</a>
                 {% endif %}
                 {% endfor %}
                 {% endif %}
@@ -48,26 +47,27 @@
 
             <div class="navbar-end">
                 <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                    🔍︎ Search
+                    <span>🔍︎ Search</span>
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    🌐
-                    {%- for tongue in site.languages -%}
-                    <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
-                        static_href
-                        %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                        {% endstatic_href %}
-                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                        {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
-                    {%- endfor -%}
+                    <span>
+                        🌐
+                        {%- for tongue in site.languages -%}
+                        <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
+                            class="has-text-white" {% static_href
+                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                            {% endstatic_href %}
+                            data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                            {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                        {%- endfor -%}
+                    </span>
                 </div>
 
-                {% if site.gh_sponsor and page.hide_gh_sponsor != true %}
+                {% if site.gh_sponsor and page.hide_gh_sponsor != true%}
                 <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
                     aria-label="Sponsor">
-                    <svg data-external-link-icon></svg>
-                    <span style="color: deeppink; font-weight: bold;">♡︎</span> Sponsor
+                    <span>♡︎ Sponsor</span>
                 </a>
                 {% endif %}
             </div>
