--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,6 +67,7 @@
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true%}
                 <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
                     aria-label="Sponsor">
+                    <svg data-external-link-icon></svg>
                     <span>♡︎ Sponsor</span>
                 </a>
                 {% endif %}
