--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,9 +65,9 @@
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true%}
-                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
-                    aria-label="Sponsor">
-                    <span style="color: LightCoral;">♡</span> Sponsor
+                <a class="navbar-item has-text-white no-external-link-icon"
+                    href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-label="Sponsor">
+                    ❤️ Sponsor
                 </a>
                 {% endif %}
             </div>
