chore: update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,6 +69,11 @@
                     href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-label="Sponsor">
                     ❤️ Sponsor
                 </a>
+                {% else %}
+                <a class="navbar-item has-text-white no-external-link-icon" href="/benefactorcircle#order"
+                    aria-label="Sponsor">
+                    ✨ Order Now
+                </a>
                 {% endif %}
             </div>
         </div>
