chore: update search

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="{{ site.theme_color | default: '#ffffff' }}">
 
+    <meta name="site-languages" content="{{ site.languages | join: ',' }}">
     <meta http-equiv="Content-Language" content="{{ site.active_lang }}">
     {%- if site.active_lang == site.default_lang -%}
         {%- assign canonicalUrl = page.url -%}
