--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,14 +50,13 @@
                     <span>🔍︎ Search</span>
                 </a>
 
-                <div class="navbar-item has-text-white">
+                <div class="navbar-item has-text-white" id="language-switcher">
                     <span>
                         🌐
                         {%- for tongue in site.languages -%}
                         <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
-                            class="has-text-white" {% static_href
-                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                            {% endstatic_href %}
+                            class="has-text-white"
+                            href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
                             data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
                             {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
                         {%- endfor -%}
