--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -121,3 +121,26 @@
     }
   });
 </script>
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const languageSwitcher = document.getElementById('language-switcher');
+    if (!languageSwitcher) return;
+
+    const currentAnchor = window.location.hash;
+
+    // Check if a URL hash (anchor) exists
+    if (currentAnchor) {
+      const languageLinks = languageSwitcher.querySelectorAll('a');
+      languageLinks.forEach((link) => {
+        const href = link.getAttribute('href');
+        
+        // Check if the link's href is not null and does not already contain an anchor
+        if (href && href.indexOf('#') === -1) {
+          link.setAttribute('href', href + currentAnchor);
+        }
+      });
+    }
+  });
+</script>
