--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,10 +56,11 @@
                         {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
                         {%- for tongue in site.languages -%}
                         <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
-                        class="has-text-white"
-                        href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page_path_without_anchor }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page_path_without_anchor }}{% endif %}"
-                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page_path_without_anchor }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page_path_without_anchor }}{% endif %}">
-                        {{ tongue }}</a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                            class="has-text-white"
+                            href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                            data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                            {{ tongue }}
+                        </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
                         {%- endfor -%}
                     </span>
                 </div>
