refactor: get trial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,9 +71,9 @@
                     ❤️ Sponsor
                 </a>
                 {% else %}
-                <a class="navbar-item has-text-white no-external-link-icon" href="/benefactorcircle#order"
-                    aria-label="Sponsor">
-                    ✨ Order Now
+                <a class="navbar-item has-text-white no-external-link-icon" href="/benefactorcircle#trial"
+                    aria-label="Get Trial">
+                    ✨ Get Trial
                 </a>
                 {% endif %}
             </div>
