--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -102,7 +102,7 @@
 
 <noscript>
   <p><img referrerpolicy="no-referrer-when-downgrade"
-      src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p>
+      src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "now" | date: "%s" }}&amp;apiv=1" style="border:0;" alt="" /></p>
 </noscript>
 <!-- End mtrcs code -->
 
