--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -121,3 +121,16 @@
     }
   });
 </script>
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
+            const $notification = $delete.parentNode;
+
+            $delete.addEventListener('click', () => {
+                $notification.parentNode.removeChild($notification);
+            });
+        });
+    });
+</script>
