--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 {% include hero.html %}
             {% endunless %}
             {% include callouts.html %}
-            <section class="section">
+            <section class="section pt-0">
                 <div class="container">
                     <div class="columns is-multiline">
                         {% if page.menubar_toc %}
