--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,12 @@
                 <img src="/assets/images/set-outlooksignatures logo 500px.png" alt="Set-OutlookSignatures">
             </a>
 
-            <a class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet" href="/search">
-                🔍︎
-            </a>
-
-            <div class="navbar-item ml-0 mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
+            <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
                 id="language-switcher-mobile">
+                <a class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet" href="/search">
+                    🔍︎
+                </a>
+                &nbsp;&nbsp;
                 <span>
                     🌐
                     {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
