language-switcher-mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,7 @@
 
             <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
                 id="language-switcher-mobile">
-                <a class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet" href="/search">
-                    🔍︎
-                </a>
+                <a href="/search">🔍︎</a>
                 &nbsp;&nbsp;
                 <span>
                     🌐
