--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,21 +6,24 @@
                 <img src="/assets/images/set-outlooksignatures logo 500px.png" alt="Set-OutlookSignatures">
             </a>
 
-            <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
-                id="language-switcher-mobile">
-                <a href="/search">🔍︎</a>
-                &nbsp;&nbsp;
-                🌐
-                {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
-                {%- for tongue in site.languages -%}
-                <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
-                    static_href
-                    %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                    {% endstatic_href %}
-                    data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                    {{ tongue }}
-                </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
-                {%- endfor -%}
+            <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet">
+                <span>
+                    <a class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet"
+                        href="/search">
+                        🔍︎
+                    </a>
+                    &nbsp;&nbsp;🌐
+                    {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
+                    {%- for tongue in site.languages -%}
+                    <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
+                        static_href
+                        %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                        {% endstatic_href %}
+                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                        {{ tongue }}
+                    </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                    {%- endfor -%}
+                </span>
             </div>
 
             <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false"
