language-switcher-mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             </a>
 
             <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet">
-                <a class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet" href="/search">
+                <a href="/search">
                     🔍︎
                 </a>
                 <span>
