language-switcher-mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,17 +7,19 @@
             </a>
 
             <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet">
-                🌐
-                {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
-                {%- for tongue in site.languages -%}
-                <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
-                    static_href
-                    %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                    {% endstatic_href %}
-                    data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                    {{ tongue }}
-                </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
-                {%- endfor -%}
+                <span>
+                    🌐
+                    {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
+                    {%- for tongue in site.languages -%}
+                    <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
+                        static_href
+                        %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                        {% endstatic_href %}
+                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                        {{ tongue }}
+                    </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                    {%- endfor -%}
+                </span>
             </div>
 
             <a role="button" class="ml-0 navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -62,17 +64,19 @@
                 </a>
 
                 <div class="navbar-item has-text-white" id="language-switcher">
-                    🌐
-                    {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
-                    {%- for tongue in site.languages -%}
-                    <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %} class="has-text-white" {%
-                        static_href
-                        %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                        {% endstatic_href %}
-                        data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                        {{ tongue }}
-                    </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
-                    {%- endfor -%}
+                    <span>
+                        🌐
+                        {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
+                        {%- for tongue in site.languages -%}
+                        <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
+                            class="has-text-white" {% static_href
+                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
+                            {% endstatic_href %}
+                            data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+                            {{ tongue }}
+                        </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                        {%- endfor -%}
+                    </span>
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true%}
